# reconfigurable_hippo

./: .gitignore  CMakeLists.txt  package.xml  setup.py
cfg/: EKF.cfg  SlidingModeController.cfg
config/: joint_angle_ekf_default.yaml
launch/: 2_hippo_sim.launch  3_hippo_sim.launch  node_angle_estimator.launch  node_controller.launch  node_mavlink_mapper.launch  node_setpoints.launch  node_state_estimator.launch  node_tracking_control.launch  test_control.launch  test_estimator.launch  tf_helper_for_bag.launch  top_2_hippo_sim.launch  top_3_hippo_sim.launch  top_control.launch  top_test_control.launch
msg/: JointState.msg  MultiHippoStates.msg
nodes/: angle_estimator_node  controller_node  deg_to_rad_node  mavlink_mapper_node  setpoint_node  state_estimator_node  state_estimator_sim_node  tf_joint_helper_node  tracking_control_node
src/reconfigurable_hippo/: ekf.py  smc.py
