<?xml version="1.0"?>
<package format="2">
  <name>reconfigurable_hippo</name>
  <version>0.0.0</version>
  <description>The reconfigurable_hippo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nathalie.bauschmann@tuhh.de">Nathalie Bauschmann</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hippocampus_common</depend>
  <depend>hippocampus_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
